// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value:  1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <table>
    <tbody>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <UrlIcon />
        </td>
        <td
          className="screen-reader-only"
        />
        <td
          className="text"
        >
          <NewTabLink
            href="https://page-url/"
            title="Navigate to target page"
          >
            <span
              className="screen-reader-only"
            >
              Target page: 
            </span>
            https://page-url/
          </NewTabLink>
        </td>
      </tr>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <DateIcon />
        </td>
        <td
          className="screen-reader-only"
          id="scan-date-text"
        >
          Scan date: 2018-03-12 11:24 PM UTC
        </td>
        <td
          aria-hidden="true"
          aria-labelledby="scan-date-text"
          className="text"
        >
          2018-03-12 11:24 PM UTC
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: description-text 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <table>
    <tbody>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <UrlIcon />
        </td>
        <td
          className="screen-reader-only"
        />
        <td
          className="text"
        >
          <NewTabLink
            href="https://page-url/"
            title="Navigate to target page"
          >
            <span
              className="screen-reader-only"
            >
              Target page: 
            </span>
            https://page-url/
          </NewTabLink>
        </td>
      </tr>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <DateIcon />
        </td>
        <td
          className="screen-reader-only"
          id="scan-date-text"
        >
          Scan date: 2018-03-12 11:24 PM UTC
        </td>
        <td
          aria-hidden="true"
          aria-labelledby="scan-date-text"
          className="text"
        >
          2018-03-12 11:24 PM UTC
        </td>
      </tr>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <CommentIcon />
        </td>
        <td
          className="screen-reader-only"
          id="comment-text"
        >
          Comment: description-text
        </td>
        <td
          aria-hidden="true"
          aria-labelledby="comment-text"
          className="text description-text"
        >
          description-text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: null 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <table>
    <tbody>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <UrlIcon />
        </td>
        <td
          className="screen-reader-only"
        />
        <td
          className="text"
        >
          <NewTabLink
            href="https://page-url/"
            title="Navigate to target page"
          >
            <span
              className="screen-reader-only"
            >
              Target page: 
            </span>
            https://page-url/
          </NewTabLink>
        </td>
      </tr>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <DateIcon />
        </td>
        <td
          className="screen-reader-only"
          id="scan-date-text"
        >
          Scan date: 2018-03-12 11:24 PM UTC
        </td>
        <td
          aria-hidden="true"
          aria-labelledby="scan-date-text"
          className="text"
        >
          2018-03-12 11:24 PM UTC
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: undefined 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <table>
    <tbody>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <UrlIcon />
        </td>
        <td
          className="screen-reader-only"
        />
        <td
          className="text"
        >
          <NewTabLink
            href="https://page-url/"
            title="Navigate to target page"
          >
            <span
              className="screen-reader-only"
            >
              Target page: 
            </span>
            https://page-url/
          </NewTabLink>
        </td>
      </tr>
      <tr>
        <td
          aria-hidden="true"
          className="icon"
        >
          <DateIcon />
        </td>
        <td
          className="screen-reader-only"
          id="scan-date-text"
        >
          Scan date: 2018-03-12 11:24 PM UTC
        </td>
        <td
          aria-hidden="true"
          aria-labelledby="scan-date-text"
          className="text"
        >
          2018-03-12 11:24 PM UTC
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
